--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div><h4>Five Day Forecast</h4></div>
                         <div class="container text-light">
                             <div class="row" id="forecast">
-                              <div class="col-sm">
+                              <div class="col-sm d-flex flex-wrap">
                                 <div class="card bg-primary">
                                     <div class="card-body">
                                       <h5 class="card-title"></h5>
