--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <div class="p-2 ">
                         <div><h4>Five Day Forecast</h4></div>
                         <div class="container text-light">
-                            <div class="row" id="forecast">
-                              <div class="col-sm d-flex flex-wrap">
+                            <div class="row d-flex flex-wrap" id="forecast">
+                              <div class="col-sm flex-shrink-0 flex-grow-0">
                                 <div class="card bg-primary">
                                     <div class="card-body">
                                       <h5 class="card-title"></h5>
@@ -85,18 +85,7 @@
                                     </div>
                                 </div>
                               </div>
-                              <div class="col-sm">
-                                <div class="card bg-primary">
-                                    <div class="card-body">
-                                      <h5 class="card-title"></h5>
-                                      <div></div>
-                                      <h6 class="card-subtitle mb-2">Temp <span></span>&#730 F</h6>
-                                      <h6 class="card-subtitle mb-2">Humidity <span></span>%</h6>
-                                      
-                                    </div>
-                                </div>
-                              </div>
-                              <div class="col-sm">
+                              <div class="col-sm flex-shrink-0 flex-grow-0">
                                 <div class="card bg-primary">
                                     <div class="card-body">
                                       <h5 class="card-title"></h5>
@@ -107,7 +96,7 @@
                                     </div>
                                 </div>
                               </div>
-                              <div class="col-sm">
+                              <div class="col-sm flex-shrink-0 flex-grow-0">
                                 <div class="card bg-primary">
                                     <div class="card-body">
                                       <h5 class="card-title"></h5>
@@ -118,7 +107,18 @@
                                     </div>
                                 </div>
                               </div>
-                              <div class="col-sm">
+                              <div class="col-sm flex-shrink-0 flex-grow-0">
+                                <div class="card bg-primary">
+                                    <div class="card-body">
+                                      <h5 class="card-title"></h5>
+                                      <div></div>
+                                      <h6 class="card-subtitle mb-2">Temp <span></span>&#730 F</h6>
+                                      <h6 class="card-subtitle mb-2">Humidity <span></span>%</h6>
+                                      
+                                    </div>
+                                </div>
+                              </div>
+                              <div class="col-sm flex-shrink-0 flex-grow-0">
                                 <div class="card bg-primary">
                                     <div class="card-body">
                                       <h5 class="card-title"></h5>
